Update Java
* Updated java to 25.